fix: White space on the right

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -129,3 +129,8 @@ $navbar-dark-disabled-color: rgba($white, 0.25) !default;
 
 // The yiq lightness value that determines when the lightness of color changes from "dark" to "light".
 $yiq-contrasted-threshold: 200 !default;
+
+html {
+  // Workaround – there is some white space on the right side of the website
+  overflow-x: hidden
+}
